1. Load test data as state in componentDidMount in the Navigation Component. 2. Feed test data into MarketOverview and LiquidityAnalysis Components. 3. Created new MarketOverviewRow Component. 4. fix nested a tag issue to remove warning: https://stackoverflow.com/questions/42561137/link-cannot-appear-as-a-descendant-of-a-link

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@
     margin: 0%;
   }
 }
+
+.navbar-nav span[role=button] {
+  padding: 15px;
+  display: inline-block;
+  line-height: 20px;
+}
